# aoc2020

./: .gitignore  Cargo.toml
crates/input/: Cargo.toml
crates/input/src/: lib.rs
days/day1/: Cargo.toml
days/day1/src/: main.rs
days/day2/: Cargo.toml
days/day2/src/: main.rs
days/day3/: Cargo.toml
days/day3/src/: main.rs
days/day4/: Cargo.toml
days/day4/src/: main.rs
days/day5/: Cargo.toml
days/day5/src/: main.rs
days/day6/: Cargo.toml
days/day6/src/: main.rs
days/day7/: Cargo.toml
days/day7/src/: main.rs
days/day8/: Cargo.toml
days/day8/src/: main.rs
