[package]
name = "day7"
version = "0.1.0"
authors = ["Jeff Davey <jeffdavey@submersion.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input = { path = "../../crates/input" }
snafu-cli-debug = "0.1"
snafu = "0.6"
petgraph = "0.5"
regex = "1.4"